--- a/html/demo2.css
+++ b/html/demo2.css
@@ -2,19 +2,15 @@
 	background-color: yellow;
     height: 300px;
     width: 500px;
-    float: right;
-}
-#child1{
-	background-color: blue;
-	height: 100px;
-    width: 100px;
-    float: left;
+   // float: left;
+    margin: 0 auto;
 
 }
-#child2{
-	background-color: red;
-	height: 100px;
-    width: 150px;
-    float: right;
+.child{
+	background-color: blue;
+	height: 150px;
+    width: 250px;
+    float: left;
+  //  border:1px solid;
 
 }
